--- a/tlog-dubbo/pom.xml
+++ b/tlog-dubbo/pom.xml
@@ -13,9 +13,24 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.yomahub</groupId>
-            <artifactId>tlog-core</artifactId>
-            <version>${project.version}</version>
+            <artifactId>aspect-log-core</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.dubbo</groupId>
