--- a/tlog-dubbo/pom.xml
+++ b/tlog-dubbo/pom.xml
@@ -36,6 +36,11 @@
             <groupId>org.apache.dubbo</groupId>
             <artifactId>dubbo</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.yomahub</groupId>
+            <artifactId>tlog-common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
 
