--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
         <fastjson.version>1.2.7</fastjson.version>
         <guava.version>19.0</guava.version>
         <slf4j.version>1.7.25</slf4j.version>
+        <dubbox.version>2.8.4</dubbox.version>
         <dubbo.version>[2.6.0,2.7.7)</dubbo.version>
         <aspect-log.version>1.2</aspect-log.version>
         <hutool-core.version>5.3.10</hutool-core.version>
@@ -80,6 +81,11 @@
                 <groupId>org.apache.dubbo</groupId>
                 <artifactId>dubbo</artifactId>
                 <version>${dubbo.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>dubbo</artifactId>
+                <version>${dubbox.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.yomahub</groupId>
@@ -176,6 +182,7 @@
         <module>tlog-common</module>
         <module>tlog-dubbo</module>
         <module>tlog-web</module>
+        <module>tlog-dubbox</module>
     </modules>
 
     <distributionManagement>
