--- a/tlog-dubbox/pom.xml
+++ b/tlog-dubbox/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>tlog-dubbo</artifactId>
+    <artifactId>tlog-dubbox</artifactId>
 
     <dependencies>
         <dependency>
@@ -18,11 +18,9 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.dubbo</groupId>
+            <groupId>com.alibaba</groupId>
             <artifactId>dubbo</artifactId>
-            <optional>true</optional>
         </dependency>
     </dependencies>
-
 
 </project>
