--- a/pom.xml
+++ b/pom.xml
@@ -47,21 +47,22 @@
         <spring-boot.version>2.0.5.RELEASE</spring-boot.version>
         <fastjson.version>1.2.7</fastjson.version>
         <guava.version>19.0</guava.version>
-        <slf4j.version>1.7.25</slf4j.version>
         <dubbox.version>2.8.4</dubbox.version>
         <dubbo.version>[2.6.0,2.7.7)</dubbo.version>
-        <aspect-log.version>1.2</aspect-log.version>
         <hutool-core.version>5.3.10</hutool-core.version>
+        <commons-logging.version>1.2</commons-logging.version>
+        <dom4j.version>1.6.1</dom4j.version>
+        <javassist.version>3.22.0-GA</javassist.version>
+        <aspectj.version>1.8.13</aspectj.version>
+        <slf4j.version>1.7.25</slf4j.version>
+        <logback.version>1.2.3</logback.version>
+        <log4j.version>1.2.17</log4j.version>
+        <slf4j-log4j12.version>1.6.1</slf4j-log4j12.version>
+        <log4j2.version>2.9.1</log4j2.version>
     </properties>
 
     <dependencyManagement>
-
         <dependencies>
-            <dependency>
-                <groupId>org.slf4j</groupId>
-                <artifactId>slf4j-api</artifactId>
-                <version>${slf4j.version}</version>
-            </dependency>
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>fastjson</artifactId>
@@ -88,11 +89,6 @@
                 <version>${dubbox.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.yomahub</groupId>
-                <artifactId>aspect-log-core</artifactId>
-                <version>${aspect-log.version}</version>
-            </dependency>
-            <dependency>
                 <groupId>cn.hutool</groupId>
                 <artifactId>hutool-core</artifactId>
                 <version>${hutool-core.version}</version>
@@ -103,6 +99,67 @@
                 <version>${spring-boot.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>dom4j</groupId>
+                <artifactId>dom4j</artifactId>
+                <version>${dom4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.javassist</groupId>
+                <artifactId>javassist</artifactId>
+                <version>${javassist.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.aspectj</groupId>
+                <artifactId>aspectjweaver</artifactId>
+                <version>${aspectj.version}</version>
+            </dependency>
+            <!-- slf4j api包 -->
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${slf4j.version}</version>
+                <optional>true</optional>
+            </dependency>
+            <!-- logback的实现包 -->
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-classic</artifactId>
+                <version>${logback.version}</version>
+                <optional>true</optional>
+            </dependency>
+            <!-- log4j的核心包 -->
+            <dependency>
+                <groupId>log4j</groupId>
+                <artifactId>log4j</artifactId>
+                <version>${log4j.version}</version>
+                <optional>true</optional>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-log4j12</artifactId>
+                <version>${slf4j-log4j12.version}</version>
+                <optional>true</optional>
+            </dependency>
+            <!-- log4j2的核心包 -->
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-api</artifactId>
+                <version>${log4j2.version}</version>
+                <optional>true</optional>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-core</artifactId>
+                <version>${log4j2.version}</version>
+                <optional>true</optional>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-slf4j-impl</artifactId>
+                <version>${log4j2.version}</version>
+                <optional>true</optional>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -183,6 +240,7 @@
         <module>tlog-dubbo</module>
         <module>tlog-web</module>
         <module>tlog-dubbox</module>
+        <module>tlog-core</module>
     </modules>
 
     <distributionManagement>
