--- a/tlog-webroot/pom.xml
+++ b/tlog-webroot/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>tlog-web</artifactId>
+    <artifactId>tlog-webroot</artifactId>
 
     <dependencies>
         <dependency>
