--- a/tlog-feign/pom.xml
+++ b/tlog-feign/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>tlog-webroot</artifactId>
+    <artifactId>tlog-feign</artifactId>
 
     <dependencies>
         <dependency>
@@ -23,10 +23,9 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
     </dependencies>
-
 
 </project>
