--- a/tlog-dubbox/pom.xml
+++ b/tlog-dubbox/pom.xml
@@ -25,6 +25,7 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>dubbo</artifactId>
+            <optional>true</optional>
         </dependency>
     </dependencies>
 
