--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
         <fastjson.version>1.2.7</fastjson.version>
         <guava.version>19.0</guava.version>
         <dubbox.version>2.8.4</dubbox.version>
-        <dubbo.version>[2.6.0,2.7.7)</dubbo.version>
+        <dubbo.version>2.7.6</dubbo.version>
         <hutool-core.version>5.3.10</hutool-core.version>
         <commons-logging.version>1.2</commons-logging.version>
         <dom4j.version>1.6.1</dom4j.version>
