--- a/tlog-common/pom.xml
+++ b/tlog-common/pom.xml
@@ -32,5 +32,9 @@
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot</artifactId>
+        </dependency>
     </dependencies>
 </project>
