加入hutool包依赖

--- a/tlog-core/pom.xml
+++ b/tlog-core/pom.xml
@@ -42,6 +42,10 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
         </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-core</artifactId>
+        </dependency>
         <!-- slf4j api包 -->
         <dependency>
             <groupId>org.slf4j</groupId>
