--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>com.yomahub</groupId>
     <artifactId>tlog</artifactId>
     <packaging>pom</packaging>
-    <version>1.1.1</version>
+    <version>1.1.2</version>
     <name>tlog</name>
     <description>a lightweight log tracking framework</description>
     <url>https://github.com/bryan31/TLog</url>
@@ -248,6 +248,7 @@
         <module>tlog-feign</module>
         <module>tlog-all</module>
         <module>tlog-all-spring-boot-starter</module>
+        <module>tlog-agent</module>
     </modules>
 
     <distributionManagement>
