--- a/tlog-agent/pom.xml
+++ b/tlog-agent/pom.xml
@@ -23,6 +23,12 @@
         <finalName>tlog-agent</finalName>
         <plugins>
             <plugin>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>1.4</version>
