bug: #I274EL 非MDC模式中，定义多个appender有可能会重复显示日志的问题

--- a/tlog-core/pom.xml
+++ b/tlog-core/pom.xml
@@ -51,6 +51,10 @@
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-cache</artifactId>
+        </dependency>
         <!-- slf4j api包 -->
         <dependency>
             <groupId>org.slf4j</groupId>
