--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
         <guava.version>19.0</guava.version>
         <dubbox.version>2.8.4</dubbox.version>
         <dubbo.version>2.7.6</dubbo.version>
-        <hutool-core.version>5.3.10</hutool-core.version>
+        <hutool.version>5.5.1</hutool.version>
         <commons-logging.version>1.2</commons-logging.version>
         <dom4j.version>1.6.1</dom4j.version>
         <javassist.version>3.22.0-GA</javassist.version>
@@ -82,7 +82,12 @@
             <dependency>
                 <groupId>cn.hutool</groupId>
                 <artifactId>hutool-core</artifactId>
-                <version>${hutool-core.version}</version>
+                <version>${hutool.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-cache</artifactId>
+                <version>${hutool.version}</version>
             </dependency>
             <dependency>
                 <groupId>dom4j</groupId>
