--- a/tlog-core/pom.xml
+++ b/tlog-core/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.yomahub</groupId>
         <artifactId>tlog</artifactId>
-        <version>1.2.0-BETA2</version>
+        <version>1.2.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
