--- a/tlog-all-spring-boot-starter/pom.xml
+++ b/tlog-all-spring-boot-starter/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>tlog</artifactId>
         <groupId>com.yomahub</groupId>
-        <version>1.2.3</version>
+        <version>1.2.4-BETA1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -21,65 +21,21 @@
             <groupId>com.yomahub</groupId>
             <artifactId>tlog-dubbox</artifactId>
             <version>${project.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>com.yomahub</groupId>
-                    <artifactId>tlog-core</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.yomahub</groupId>
-                    <artifactId>tlog-common</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.yomahub</groupId>
             <artifactId>tlog-feign</artifactId>
             <version>${project.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>com.yomahub</groupId>
-                    <artifactId>tlog-core</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.yomahub</groupId>
-                    <artifactId>tlog-common</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.yomahub</groupId>
             <artifactId>tlog-webroot</artifactId>
             <version>${project.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>com.yomahub</groupId>
-                    <artifactId>tlog-core</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.yomahub</groupId>
-                    <artifactId>tlog-common</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.yomahub</groupId>
             <artifactId>tlog-gateway</artifactId>
             <version>${project.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>com.yomahub</groupId>
-                    <artifactId>tlog-core</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.yomahub</groupId>
-                    <artifactId>tlog-common</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.springframework.cloud</groupId>
-                    <artifactId>spring-cloud-starter-gateway</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
