--- a/tlog-gateway/pom.xml
+++ b/tlog-gateway/pom.xml
@@ -24,6 +24,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-gateway</artifactId>
+            <optional>true</optional>
         </dependency>
     </dependencies>
 
