--- a/tlog-all-spring-boot-starter/pom.xml
+++ b/tlog-all-spring-boot-starter/pom.xml
@@ -49,5 +49,11 @@
             <version>2.0.5.RELEASE</version>
             <optional>true</optional>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 </project>
