--- a/tlog-gateway/pom.xml
+++ b/tlog-gateway/pom.xml
@@ -13,12 +13,7 @@
     <dependencies>
         <dependency>
             <groupId>com.yomahub</groupId>
-            <artifactId>tlog-common</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.yomahub</groupId>
-            <artifactId>tlog-core</artifactId>
+            <artifactId>tlog-webflux</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
