--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,7 @@
         <log4j.version>1.2.17</log4j.version>
         <slf4j-log4j12.version>1.6.1</slf4j-log4j12.version>
         <log4j2.version>2.12.0</log4j2.version>
+        <ttl.version>2.12.1</ttl.version>
     </properties>
 
     <dependencyManagement>
@@ -102,6 +103,11 @@
                 <groupId>org.aspectj</groupId>
                 <artifactId>aspectjweaver</artifactId>
                 <version>${aspectj.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>transmittable-thread-local</artifactId>
+                <version>${ttl.version}</version>
             </dependency>
             <!-- 开源社区的dubbo包 -->
             <dependency>
@@ -227,7 +233,7 @@
                 </executions>
             </plugin>
             <!-- Gpg Signature -->
-            <!--<plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-gpg-plugin</artifactId>
                 <version>1.6</version>
@@ -240,7 +246,7 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>-->
+            </plugin>
         </plugins>
     </build>
 
