--- a/tlog-common/pom.xml
+++ b/tlog-common/pom.xml
@@ -37,6 +37,10 @@
             <artifactId>hutool-cache</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>transmittable-thread-local</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot</artifactId>
         </dependency>
