--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>com.yomahub</groupId>
     <artifactId>tlog</artifactId>
     <packaging>pom</packaging>
-    <version>1.2.7</version>
+    <version>1.3.0</version>
     <name>tlog</name>
     <description>a lightweight log tracking framework</description>
     <url>https://github.com/bryan31/TLog</url>
@@ -44,6 +44,7 @@
         <java.version>1.8</java.version>
         <commons.lang3.version>3.4</commons.lang3.version>
         <commons-collections.version>4.1</commons-collections.version>
+        <spring.version>5.0.9.RELEASE</spring.version>
         <spring-boot.version>2.0.5.RELEASE</spring-boot.version>
         <spring-cloud.version>Finchley.RELEASE</spring-cloud.version>
         <guava.version>19.0</guava.version>
