--- a/tlog-spring-boot/tlog-dubbox-spring-boot-starter/pom.xml
+++ b/tlog-spring-boot/tlog-dubbox-spring-boot-starter/pom.xml
@@ -3,18 +3,23 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>tlog</artifactId>
+        <artifactId>tlog-spring-boot</artifactId>
         <groupId>com.yomahub</groupId>
         <version>1.3.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>tlog-all-spring-boot-starter</artifactId>
+    <artifactId>tlog-dubbox-spring-boot-starter</artifactId>
+
+    <properties>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+    </properties>
 
     <dependencies>
         <dependency>
             <groupId>com.yomahub</groupId>
-            <artifactId>tlog-dubbo</artifactId>
+            <artifactId>tlog-spring-boot-configuration</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
@@ -24,22 +29,7 @@
         </dependency>
         <dependency>
             <groupId>com.yomahub</groupId>
-            <artifactId>tlog-feign</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.yomahub</groupId>
             <artifactId>tlog-webroot</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.yomahub</groupId>
-            <artifactId>tlog-gateway</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.yomahub</groupId>
-            <artifactId>tlog-webflux</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
@@ -54,7 +44,6 @@
             <version>2.0.5.RELEASE</version>
             <optional>true</optional>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
