--- a/tlog-spring-boot/tlog-web-spring-boot-starter/pom.xml
+++ b/tlog-spring-boot/tlog-web-spring-boot-starter/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>tlog-feign-spring-boot-starter</artifactId>
+    <artifactId>tlog-web-spring-boot-starter</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -24,7 +24,7 @@
         </dependency>
         <dependency>
             <groupId>com.yomahub</groupId>
-            <artifactId>tlog-feign</artifactId>
+            <artifactId>tlog-webroot</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
@@ -37,6 +37,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
             <version>2.0.5.RELEASE</version>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
             <optional>true</optional>
         </dependency>
     </dependencies>
