--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,8 @@
     </scm>
 
     <properties>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
         <commons.lang3.version>3.4</commons.lang3.version>
