--- a/pom.xml
+++ b/pom.xml
@@ -265,6 +265,7 @@
         <module>tlog-gateway</module>
         <module>tlog-webflux</module>
         <module>tlog-spring-boot</module>
+        <module>tlog-xxl-job</module>
     </modules>
 
     <distributionManagement>
