feature #I1W7YA 框架级别支持HttpClient和OkHttp客户端的调用埋点

--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,8 @@
         <log4j2.version>2.12.0</log4j2.version>
         <ttl.version>2.12.1</ttl.version>
         <quartz.version>2.3.0</quartz.version>
+        <httpclient.version>4.5.10</httpclient.version>
+        <okhttp.version>3.2.0</okhttp.version>
     </properties>
 
     <dependencyManagement>
@@ -261,6 +263,8 @@
         <module>tlog-dubbox</module>
         <module>tlog-core</module>
         <module>tlog-feign</module>
+        <module>tlog-httpclient</module>
+        <module>tlog-okhttp</module>
         <module>tlog-all</module>
         <module>tlog-agent</module>
         <module>tlog-gateway</module>
