--- a/tlog-all/pom.xml
+++ b/tlog-all/pom.xml
@@ -29,6 +29,11 @@
         </dependency>
         <dependency>
             <groupId>com.yomahub</groupId>
+            <artifactId>tlog-task</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.yomahub</groupId>
             <artifactId>tlog-httpclient</artifactId>
             <version>${project.version}</version>
         </dependency>
