--- a/tlog-agent/pom.xml
+++ b/tlog-agent/pom.xml
@@ -23,7 +23,9 @@
         <finalName>tlog-agent</finalName>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.8.2</version>
                 <configuration>
                     <skip>true</skip>
                 </configuration>
