--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,7 @@
         <quartz.version>2.3.0</quartz.version>
         <httpclient.version>4.5.10</httpclient.version>
         <okhttp.version>3.2.0</okhttp.version>
+        <xxl-job.version>2.3.0</xxl-job.version>
     </properties>
 
     <dependencyManagement>
