--- a/tlog-httpclient/pom.xml
+++ b/tlog-httpclient/pom.xml
@@ -28,6 +28,12 @@
             <version>${httpclient.version}</version>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents.client5</groupId>
+            <artifactId>httpclient5</artifactId>
+            <version>${httpclient5.version}</version>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
 
