pom加入新的模块

--- a/tlog-spring-boot/tlog-all-spring-boot-starter/pom.xml
+++ b/tlog-spring-boot/tlog-all-spring-boot-starter/pom.xml
@@ -59,6 +59,16 @@
         </dependency>
         <dependency>
             <groupId>com.yomahub</groupId>
+            <artifactId>tlog-hutool-http</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.yomahub</groupId>
+            <artifactId>tlog-forest</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.yomahub</groupId>
             <artifactId>tlog-task</artifactId>
             <version>${project.version}</version>
         </dependency>
