--- a/tlog-all/pom.xml
+++ b/tlog-all/pom.xml
@@ -42,5 +42,15 @@
             <artifactId>tlog-okhttp</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.yomahub</groupId>
+            <artifactId>tlog-hutool-http</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.yomahub</groupId>
+            <artifactId>tlog-forest</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
