更新版本号至1.3.6

--- a/pom.xml
+++ b/pom.xml
@@ -299,6 +299,7 @@
         <module>tlog-xxl-job</module>
         <module>tlog-hutool-http</module>
         <module>tlog-forest</module>
+        <module>tlog-rest-template</module>
     </modules>
 
     <distributionManagement>
