--- a/tlog-spring-boot/tlog-all-spring-boot-starter/pom.xml
+++ b/tlog-spring-boot/tlog-all-spring-boot-starter/pom.xml
@@ -69,6 +69,11 @@
         </dependency>
         <dependency>
             <groupId>com.yomahub</groupId>
+            <artifactId>tlog-rest-template</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.yomahub</groupId>
             <artifactId>tlog-task</artifactId>
             <version>${project.version}</version>
         </dependency>
