--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>com.yomahub</groupId>
     <artifactId>tlog</artifactId>
     <packaging>pom</packaging>
-    <version>1.3.6</version>
+    <version>1.3.7</version>
     <name>tlog</name>
     <description>a lightweight log tracking framework</description>
     <url>https://github.com/bryan31/TLog</url>
@@ -71,10 +71,25 @@
         <forest.version>1.5.14</forest.version>
         <xxl-job.version>2.3.0</xxl-job.version>
         <qlexpress.version>3.2.0</qlexpress.version>
+        <logstash-logback.version>6.6</logstash-logback.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+            <!-- spring相关包的依赖 -->
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-context</artifactId>
+                <version>${spring.version}</version>
+                <optional>true</optional>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-context-support</artifactId>
+                <version>${spring.version}</version>
+                <optional>true</optional>
+            </dependency>
+            <!-- 其他的依赖包 -->
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
@@ -186,6 +201,46 @@
                 <groupId>org.apache.logging.log4j</groupId>
                 <artifactId>log4j-slf4j-impl</artifactId>
                 <version>${log4j2.version}</version>
+            </dependency>
+            <!-- xxljob依赖包 -->
+            <dependency>
+                <groupId>com.xuxueli</groupId>
+                <artifactId>xxl-job-core</artifactId>
+                <version>${xxl-job.version}</version>
+                <optional>true</optional>
+            </dependency>
+            <!-- httpclient 4,5的依赖包 -->
+            <dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpclient</artifactId>
+                <version>${httpclient.version}</version>
+                <optional>true</optional>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.httpcomponents.client5</groupId>
+                <artifactId>httpclient5</artifactId>
+                <version>${httpclient5.version}</version>
+                <optional>true</optional>
+            </dependency>
+            <!-- forest的依赖包 -->
+            <dependency>
+                <groupId>com.dtflys.forest</groupId>
+                <artifactId>forest-core</artifactId>
+                <version>${forest.version}</version>
+                <optional>true</optional>
+            </dependency>
+            <!-- quartz的依赖包 -->
+            <dependency>
+                <groupId>org.quartz-scheduler</groupId>
+                <artifactId>quartz</artifactId>
+                <version>${quartz.version}</version>
+                <optional>true</optional>
+            </dependency>
+            <!--logstash的核心包-->
+            <dependency>
+                <groupId>net.logstash.logback</groupId>
+                <artifactId>logstash-logback-encoder</artifactId>
+                <version>${logstash-logback.version}</version>
             </dependency>
 
             <!-- springboot依赖 -->
@@ -300,6 +355,7 @@
         <module>tlog-hutool-http</module>
         <module>tlog-forest</module>
         <module>tlog-rest-template</module>
+        <module>tlog-logstash</module>
     </modules>
 
     <distributionManagement>
