future #I49PSX 对logstash进行支持

--- a/tlog-logstash/tlog-logstash-logback/pom.xml
+++ b/tlog-logstash/tlog-logstash-logback/pom.xml
@@ -13,8 +13,25 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.yomahub</groupId>
+            <artifactId>tlog-common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <optional>true</optional>
+        </dependency>
+
+        <dependency>
             <groupId>net.logstash.logback</groupId>
             <artifactId>logstash-logback-encoder</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>transmittable-thread-local</artifactId>
         </dependency>
     </dependencies>
 
