--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>com.yomahub</groupId>
     <artifactId>tlog</artifactId>
     <packaging>pom</packaging>
-    <version>1.4.3</version>
+    <version>1.5.0</version>
     <name>tlog</name>
     <description>a lightweight log tracking framework</description>
     <url>https://github.com/bryan31/TLog</url>
@@ -49,13 +49,12 @@
         <spring.version>5.0.9.RELEASE</spring.version>
         <spring-boot.version>2.0.5.RELEASE</spring-boot.version>
         <spring-cloud.version>Finchley.RELEASE</spring-cloud.version>
-        <guava.version>19.0</guava.version>
         <dubbox.version>2.8.4</dubbox.version>
         <dubbo.version>2.7.6</dubbo.version>
-        <hutool.version>5.7.16</hutool.version>
+        <hutool.version>5.8.6</hutool.version>
         <fastjson.version>1.2.83</fastjson.version>
         <commons-logging.version>1.2</commons-logging.version>
-        <dom4j.version>1.6.1</dom4j.version>
+        <dom4j.version>2.1.3</dom4j.version>
         <javassist.version>3.22.0-GA</javassist.version>
         <aspectj.version>1.8.13</aspectj.version>
         <slf4j.version>1.7.25</slf4j.version>
@@ -82,23 +81,34 @@
                 <artifactId>spring-context</artifactId>
                 <version>${spring.version}</version>
                 <optional>true</optional>
+                <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-context-support</artifactId>
                 <version>${spring.version}</version>
                 <optional>true</optional>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-webmvc</artifactId>
+                <version>${spring.version}</version>
+                <optional>true</optional>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-web</artifactId>
+                <version>${spring.version}</version>
+                <optional>true</optional>
+                <scope>provided</scope>
             </dependency>
             <!-- 其他的依赖包 -->
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
                 <version>${commons.lang3.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.google.guava</groupId>
-                <artifactId>guava</artifactId>
-                <version>${guava.version}</version>
             </dependency>
             <dependency>
                 <groupId>cn.hutool</groupId>
@@ -111,7 +121,7 @@
                 <version>${hutool.version}</version>
             </dependency>
             <dependency>
-                <groupId>dom4j</groupId>
+                <groupId>org.dom4j</groupId>
                 <artifactId>dom4j</artifactId>
                 <version>${dom4j.version}</version>
             </dependency>
@@ -146,12 +156,16 @@
                 <groupId>org.apache.dubbo</groupId>
                 <artifactId>dubbo</artifactId>
                 <version>${dubbo.version}</version>
+                <optional>true</optional>
+                <scope>provided</scope>
             </dependency>
             <!-- dubbox包 -->
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>dubbo</artifactId>
                 <version>${dubbox.version}</version>
+                <optional>true</optional>
+                <scope>provided</scope>
             </dependency>
             <!-- slf4j api包 -->
             <dependency>
@@ -164,33 +178,45 @@
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-classic</artifactId>
                 <version>${logback.version}</version>
+                <optional>true</optional>
+                <scope>provided</scope>
             </dependency>
             <!-- log4j的核心包 -->
             <dependency>
                 <groupId>log4j</groupId>
                 <artifactId>log4j</artifactId>
                 <version>${log4j.version}</version>
+                <optional>true</optional>
+                <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-log4j12</artifactId>
                 <version>${slf4j-log4j12.version}</version>
+                <optional>true</optional>
+                <scope>provided</scope>
             </dependency>
             <!-- log4j2的核心包 -->
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
                 <artifactId>log4j-api</artifactId>
                 <version>${log4j2.version}</version>
+                <optional>true</optional>
+                <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
                 <artifactId>log4j-core</artifactId>
                 <version>${log4j2.version}</version>
+                <optional>true</optional>
+                <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
                 <artifactId>log4j-slf4j-impl</artifactId>
                 <version>${log4j2.version}</version>
+                <optional>true</optional>
+                <scope>provided</scope>
             </dependency>
             <!-- xxljob依赖包 -->
             <dependency>
@@ -198,6 +224,7 @@
                 <artifactId>xxl-job-core</artifactId>
                 <version>${xxl-job.version}</version>
                 <optional>true</optional>
+                <scope>provided</scope>
             </dependency>
             <!-- httpclient 4,5的依赖包 -->
             <dependency>
@@ -205,12 +232,14 @@
                 <artifactId>httpclient</artifactId>
                 <version>${httpclient.version}</version>
                 <optional>true</optional>
+                <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.apache.httpcomponents.client5</groupId>
                 <artifactId>httpclient5</artifactId>
                 <version>${httpclient5.version}</version>
                 <optional>true</optional>
+                <scope>provided</scope>
             </dependency>
             <!-- forest的依赖包 -->
             <dependency>
@@ -218,6 +247,7 @@
                 <artifactId>forest-core</artifactId>
                 <version>${forest.version}</version>
                 <optional>true</optional>
+                <scope>provided</scope>
             </dependency>
             <!-- quartz的依赖包 -->
             <dependency>
@@ -225,12 +255,15 @@
                 <artifactId>quartz</artifactId>
                 <version>${quartz.version}</version>
                 <optional>true</optional>
+                <scope>provided</scope>
             </dependency>
             <!--logstash的核心包-->
             <dependency>
                 <groupId>net.logstash.logback</groupId>
                 <artifactId>logstash-logback-encoder</artifactId>
                 <version>${logstash-logback.version}</version>
+                <optional>true</optional>
+                <scope>provided</scope>
             </dependency>
 
             <!-- springboot依赖 -->
